remove unuseful lines

--- a/air_pollution.ipynb
+++ b/air_pollution.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "34bd10e4",
+   "metadata": {},
+   "source": [
+    "# Air Pollution (from openweathermap.org) @ IMAG (12 months since June 2021)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "846c5d28",
